# segbenchpy

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  correspondPixels.cc  match.cc  match.hh
csa/: CMakeLists.txt  GNUmakefile  csaAssign.cc  test.cc
edges/: CMakeLists.txt  edgesNms2d.cxx  edgesNms3d.cxx
notebook/: 3dEdgeGT.npy  3dEdgeIm.npy  3dEdgeTest.npy  Untitled.ipynb  Untitled1.ipynb  test3DEdgeBenchmark-Dead.ipynb  test3DEdgeBenchmark.ipynb  testBench.ipynb  testEdges.ipynb  testEdgesDataset.ipynb
old-python/: CMakeLists.txt
old-python/old_py/: csa.i
python/: CMakeLists.txt  __init__.py.in  benchmark.i  csa.i  edges.i  test.ipynb  testBench.ipynb  testEdges.ipynb
python/segbench/: __init__.py  benchmark.py  csa.py  edges.py  util.py
util/: Array.hh  CMakeLists.txt  Matrix.hh
